Closed Bug 1898362 Opened 1 year ago Closed 1 year ago

setCodecPreferences should be case-insensitive on mimeTypes

Categories

(Core :: WebRTC: Signaling, defect)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox126 --- unaffected
firefox127 --- unaffected
firefox128 --- fixed

People

(Reporter: jib, Assigned: dbaker)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

In setCodecPreferences here, Firefox expects an exact match on mimeType when the spec is being clarified to say it needs to be case-insensitive.

While this may seem minor, it'd be good to fix this before this feature goes to release. W3C also needs a test for the spec change to REC.

Here's the test/STR:

  1. Open https://jsfiddle.net/jib1/wdt7z20n/

Set release status flags based on info from the regressing bug 1396922

:dbaker, since you are the author of the regressor, bug 1396922, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Assignee: nobody → dbaker
Severity: -- → S3
Flags: needinfo?(dbaker)
Pushed by dbaker@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7b3a01bb9b4b Changed to case-insensitive check of mimeType between codecs in setCodecPreferences;r=jib
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/46526 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: