Bug 1898362 - Changed to case-insensitive check of mimeType between codecs in setCodecPreferences;r=jib

Differential Revision: https://phabricator.services.mozilla.com/D211469